# sec-poc

./: .gitmodules  Cargo.toml  readme.md
server/: Cargo.toml  privatekey.pem
server/src/: main.rs
src/: enc-dec.rs  key-schedule.rs  main.rs  tpm.rs
