[package]
name = "sec-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
env_logger = "0.11.6"
log = { version = "0.4.25", features = [] }
ring = "0.17.8"
tls-parser = { path = "libs/tls-parser", features = ["cookie-factory", "serialize"] }
chrono = "0.4.39"
tss-esapi = "7.6.0"
signature = "2.2.0"
rsa = "0.9.7"
x509-cert = { version = "0.2.5", features = ["builder", "sha1", "signature"] }
der = "0.7.9"
sha1 = "0.10.6"
sha2 = { version = "0.10.8", features = ["oid"] }



[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]